fix layout issue

--- a/src/component/Room.css
+++ b/src/component/Room.css
@@ -4,7 +4,7 @@ body{
 
 video{
 width: 100%;
-height: 100%;
+height: 100% !important;
 position: absolute;
 top: 0;
   object-fit: cover;
@@ -12,6 +12,9 @@ top: 0;
   transform: scaleX(-1);
   border-radius: 10px;
   box-shadow:0 4px 6px -1px rgba(0, 0, 0, 0.1), 0 2px 4px -1px rgba(0, 0, 0, 0.06);
+}
+.vcontainer{
+padding-top: 75%;
 }
 
 video.zoomin{
